--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -5,7 +5,7 @@
       <div class="form-group">
         <label for="username">Username</label>
         <input type="text" class="form-control" name="username" [(ngModel)]="creds.username" #username="ngModel" required />
-        <div class="text-danger" *ngIf="username.touched && username.invalid && username.errors.required" >Username is required!</div>
+        <div class="text-danger" *ngIf="username.touched && username.invalid && username.errors.required">Username is required!</div>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
@@ -13,9 +13,11 @@
         <div class="text-danger" *ngIf="password.touched && password.invalid && password.errors.required">Password is required!</div>
       </div>
       <div class="form-group">
-        <input type="submit" class="btn btn-success" value="Login" [disabled]="theForm.invalid" />
-        <a routerLink="/" class="btn btn-default">Cancel</a>
+        <input type="submit" class="btn btn-primary" value="Login" [disabled]="theForm.invalid" />
       </div>
     </form>
   </div>
+</div>
+<div *ngIf="loading">
+  <app-loading></app-loading>
 </div>
