--- a/src/app/login.component.html
+++ b/src/app/login.component.html
@@ -13,11 +13,10 @@
         <div class="text-danger" *ngIf="password.touched && password.invalid && password.errors.required">Password is required!</div>
       </div>
       <div class="form-group">
-        <input type="submit" class="btn btn-primary" value="Login" [disabled]="theForm.invalid" />
+        <button type="submit" class="btn btn-primary" [disabled]="theForm.invalid && loading" >
+          Login <i *ngIf="loading" class='fa fa-spinner fa-spin '></i>
+        </button>
       </div>
     </form>
   </div>
-</div>
-<div *ngIf="loading">
-  <app-loading></app-loading>
 </div>
