--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,242 +1,221 @@
+<!-- Icon Cards-->
 <div class="row">
-    <div class="col-lg-3 col-xs-6">
-        <!-- small box -->
-        <div class="small-box bg-aqua">
-            <div class="inner">
-                <h3>
-                    7123
-                </h3>
-                <p>
-                    Sales
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-primary o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-money"></i>
+                </div>
+                <div class="mr-5">3213 Sales</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/purchases']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-warning o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-truck"></i>
+                </div>
+                <div class="mr-5">11 Purchases</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/products']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-success o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-gift"></i>
+                </div>
+                <div class="mr-5">12300 Products</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/products']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white o-hidden h-100" style="background-color: #00c0ef!important">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-smile-o"></i>
+                </div>
+                <div class="mr-5">3243 Customers</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/customers']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white bg-danger o-hidden h-100">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-warning"></i>
+                </div>
+                <div class="mr-5">13 Inventory Alert</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/inventories']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+    <div class="col-xl-3 col-sm-6 mb-3">
+        <div class="card text-white o-hidden h-100" style="background-color: #85144b!important">
+            <div class="card-body">
+                <div class="card-body-icon">
+                    <i class="fa fa-fw fa-group"></i>
+                </div>
+                <div class="mr-5">500 Suppliers</div>
+            </div>
+            <a class="card-footer text-white clearfix small z-1" href="" [routerLink]="['/suppliers']" routerLinkActive="active">
+                <span class="float-left">View Details</span>
+                <span class="float-right">
+                    <i class="fa fa-angle-right"></i>
+                </span>
+            </a>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-lg-6">
+        <!-- Example Bar Chart Card-->
+        <div class="card mb-3">
+            <div class="card-header">
+                <i class="fa fa-bar-chart"></i> Bar Sales</div>
+            <div class="card-body">
+                <div class="row">
+                    <ngx-charts-area-chart [view]="view" [scheme]="colorScheme" [results]="data" [gradient]="gradient" [xAxis]="showXAxis" [yAxis]="showYAxis"
+                        [legend]="showLegend" [showXAxisLabel]="showXAxisLabel" [showYAxisLabel]="showYAxisLabel" [xAxisLabel]="xAxisLabel"
+                        [yAxisLabel]="yAxisLabel" (select)="onSelect($event)">
+                    </ngx-charts-area-chart>
+                </div>
+            </div>
+            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+        </div>
+
+    </div>
+    <div class="col-lg-6">
+        <!-- Example Pie Chart Card-->
+        <div class="card mb-3">
+            <div class="card-header">
+                <i class="fa fa-pie-chart"></i> Pie per monlth sales</div>
+            <div class="card-body">
+
+                <ngx-charts-pie-grid [view]="view" [scheme]="colorScheme" [results]="pieData" (select)="onSelect($event)">
+                </ngx-charts-pie-grid>
+            </div>
+            <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+        </div>
+    </div>
+</div>
+<div>
+        <h3 class="box-title">Useful tips for your start.</h3>
+        <!-- /.box-header -->
+        <div class="box-body">
+            <div class="callout callout-danger">
+                <h4>How can I start it?</h4>
+                <p>Hi If you have just started your new business, You do not need to worry about any things and all you need to
+                    do is to define your warehouse and add your product information or import them to the system. Maybe you have
+                    already run your business awhile or you are using a another management system and you plan to change it,
+                    So before you start, you would like to suggest you to initalize your inventory data.
                 </p>
             </div>
-            <a href="" [routerLink]="['/sales']" routerLinkActive="active">
-                <div class="icon">
-                    <i class="fa fa-money"></i>
-                </div>
-            </a>
-            <a href="" [routerLink]="['/sales']" routerLinkActive="active" class="small-box-footer">
-                More info <i class="fa fa-arrow-circle-right"></i>
-            </a>
-        </div>
-    </div><!-- ./col -->
-<div class="col-lg-3 col-xs-6">
-    <!-- small box -->
-    <div class="small-box bg-green">
-        <div class="inner">
-            <h3>
-                56
-            </h3>
-            <p>
-                Purchases
-            </p>
-        </div>
-        <a href="" [routerLink]="['/purchases']" routerLinkActive="active">
-            <div class="icon">
-                <i class="fa fa-truck"></i>
+            <div class="callout callout-info">
+                <h4>How can I manage it?</h4>
+                <p>When you start to use it, you must want this system is security for your business and all workers working on
+                    their duties. If so, you setup operation rule to your staff.
+                </p>
             </div>
-        </a>
-        <a href="" [routerLink]="['/purchases']" routerLinkActive="active" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-        </a>
-    </div>
-</div><!-- ./col -->
-<div class="col-lg-3 col-xs-6">
-    <!-- small box -->
-    <div class="small-box bg-yellow">
-        <div class="inner">
-            <h3>
-                3000
-            </h3>
-            <p>
-                Products
-            </p>
-        </div>
-        <a href="" [routerLink]="['/products']" routerLinkActive="active">
-            <div class="icon">
-                <i class="fa fa-gift"></i>
+            <div class="callout callout-warning">
+                <h4>How can I check your sales result and profit?</h4>
+                <p>Yes, this is most import things for all users. We offer the report funcitons,which enable you to quickly get
+                    them </p>
             </div>
-        </a>
-        <a href="" [routerLink]="['/products']" routerLinkActive="active" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-        </a>
-    </div>
-</div><!-- ./col -->
-<div class="col-lg-3 col-xs-6">
-    <!-- small box -->
-    <div class="small-box bg-light-blue-gradient">
-        <div class="inner">
-            <h3>
-                6000
-            </h3>
-            <p>
-                Customers
-            </p>
         </div>
-        <a href="" [routerLink]="['/customers']" routerLinkActive="active">
-            <div class="icon">
-                <i class="fa fa-smile-o"></i>
-            </div>
-        </a>
-        <a href="" [routerLink]="['/customers']" routerLinkActive="active" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-        </a>
-    </div>
-</div><!-- ./col -->
-<div class="col-lg-3 col-xs-6">
-    <!-- small box -->
-    <div class="small-box bg-red">
-        <div class="inner">
-            <h3>
-                10
-            </h3>
-            <p>
-                Inventory Alert
-            </p>
-        </div>
-        <a href="" [routerLink]="['/inventories']" routerLinkActive="active">
-            <div class="icon">
-                <i class="fa fa-warning"></i>
-            </div>
-        </a>
-        <a href="" [routerLink]="['/inventories']" routerLinkActive="active" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-        </a>
-    </div>
-</div><!-- ./col -->
-<div class="col-lg-3 col-xs-6">
-    <!-- small box -->
-    <div class="small-box bg-maroon">
-        <div class="inner">
-            <h3>
-                500
-            </h3>
-            <p>
-                Suppliers
-            </p>
-        </div>
-        <a href="" [routerLink]="['/suppliers']" routerLinkActive="active">
-            <div class="icon">
-                <i class="fa fa-group"></i>
-            </div>
-        </a>
-        <a href="" [routerLink]="['/suppliers']" routerLinkActive="active" class="small-box-footer">
-            More info <i class="fa fa-arrow-circle-right"></i>
-        </a>
-    </div>
-</div><!-- ./col -->
 </div>
-<div class="row">
-    <div class="col-md-6">
-        <ngx-charts-area-chart
-            [view]="view"
-            [scheme]="colorScheme"
-            [results]="data"
-            [gradient]="gradient"
-            [xAxis]="showXAxis"
-            [yAxis]="showYAxis"
-            [legend]="showLegend"
-            [showXAxisLabel]="showXAxisLabel"
-            [showYAxisLabel]="showYAxisLabel"
-            [xAxisLabel]="xAxisLabel"
-            [yAxisLabel]="yAxisLabel"
-            (select)="onSelect($event)">
-        </ngx-charts-area-chart>
-    </div>
-    <div class="col-md-6">
-        <ngx-charts-pie-grid
-            [view]="view"
-            [scheme]="colorScheme"
-            [results]="pieData"
-            (select)="onSelect($event)">
-        </ngx-charts-pie-grid>
-    </div>
-</div>
-<div class="row" style="padding:20px;padding-top: 0px;">
-    <div class="box-header">
-        <h3 class="box-title">Useful tips for your start.</h3>
-    </div><!-- /.box-header -->
-    <div class="box-body">
-        <div class="callout callout-danger">
-            <h4>How can I start it?</h4>
-            <p>Hi If you have just started your new business, You do not need to worry about any things and all you need to do is to define your warehouse and add your product information or import them to the system.
-                Maybe you have already run your business awhile or you are using a another management system and you plan to change it, 
-                So before you start, you would like to suggest you to initalize your inventory data.
-            </p>
-        </div>
-        <div class="callout callout-info">
-            <h4>How can I manage it?</h4>
-            <p>When you start to use it, you must want this system is security for your business and all workers working on their duties.
-                If so, you setup operation rule to your staff.
-            </p>
-        </div>
-        <div class="callout callout-warning">
-            <h4>How can I check your sales result and profit?</h4>
-            <p>Yes, this is most import things for all users. We offer the report funcitons,which enable you to quickly get them </p>
-        </div>
-    </div><!-- /.box-body -->
-    <div class="box-header">
+<div>
         <h3 class="box-title">System functions list.</h3>
-    </div><!-- /.box-header -->
-    <div class="box-body">
-        
-        <div class="callout callout-info">
-            <h4>Settings</h4>
-            <ol>
-                <li>Setting up firm basic information like name, address, contact and so on.</li>
-                <li>Defining firm’s warehouses.</li>
-                <li>Defining product category.</li>
-                <li>Managing system users.</li>
-                <li>Checking system error logs.</li>
-                <li>
-                    Backup system data.
-                </li>
-            </ol>
-            <h4>Product</h4>
-            <ol>
-                <li>Searching products.</li>
-                <li>Downloading the template of import product format.</li>
-                <li>Import existing products data.</li>
-                <li>Export system products data.</li>
-                <li>Product maintenance such as add, edit and delete.</li>
-            </ol>
-            <h4>Inventory</h4>
-            <ol>
-                <li>Inventory products list and the track record of product quantity changes.</li>
-                <li>Inventory products’ quantity initalization.</li>
-                <li>Setting inventory products’ monitor.</li>
-                <li>Tranfering products from one warehouse to another one.</li>
-                <li>Products quantity adjustment.</li>
-            </ol>
-            <h4>Supplier</h4>
-            <ol>
-                <li>Supplier searching function.</li>
-                <li>Supplier maintenance like adding supplier, edit and delete.</li>
-            </ol>
-
-            <h4>Purchase</h4>
-            <ol>
-                <li>Purchase searching function.</li>
-                <li>Adding purchases.</li>
-            </ol>
-            <h4>Customer</h4>
-            <ol>
-                <li>Customer searching function.</li>
-                <li>Customer maintenance.</li>
-                <li>Customer export and import.</li>
-            </ol>
-            <h4>Sales</h4>
-            <ol>
-                <li>Sales searching function.</li>
-                <li>Sales maintenance.</li>
-            </ol>
-            <h4>Report</h4>
-            <ol>
-                <li>Sales analysis report.</li>
-                <li>Sales profit analysis report.</li>
-                <li>Sale channel analysis report.</li>
-                <li>Purchase analysis report.</li>
-            </ol>
+        <!-- /.box-header -->
+        <div class="box-body">
+            <div class="callout callout-info">
+                <h4>Settings</h4>
+                <ol>
+                    <li>Setting up firm basic information like name, address, contact and so on.</li>
+                    <li>Defining firm’s warehouses.</li>
+                    <li>Defining product category.</li>
+                    <li>Managing system users.</li>
+                    <li>Checking system error logs.</li>
+                    <li>
+                        Backup system data.
+                    </li>
+                </ol>
+                <h4>Product</h4>
+                <ol>
+                    <li>Searching products.</li>
+                    <li>Downloading the template of import product format.</li>
+                    <li>Import existing products data.</li>
+                    <li>Export system products data.</li>
+                    <li>Product maintenance such as add, edit and delete.</li>
+                </ol>
+                <h4>Inventory</h4>
+                <ol>
+                    <li>Inventory products list and the track record of product quantity changes.</li>
+                    <li>Inventory products’ quantity initalization.</li>
+                    <li>Setting inventory products’ monitor.</li>
+                    <li>Tranfering products from one warehouse to another one.</li>
+                    <li>Products quantity adjustment.</li>
+                </ol>
+                <h4>Supplier</h4>
+                <ol>
+                    <li>Supplier searching function.</li>
+                    <li>Supplier maintenance like adding supplier, edit and delete.</li>
+                </ol>
+    
+                <h4>Purchase</h4>
+                <ol>
+                    <li>Purchase searching function.</li>
+                    <li>Adding purchases.</li>
+                </ol>
+                <h4>Customer</h4>
+                <ol>
+                    <li>Customer searching function.</li>
+                    <li>Customer maintenance.</li>
+                    <li>Customer export and import.</li>
+                </ol>
+                <h4>Sales</h4>
+                <ol>
+                    <li>Sales searching function.</li>
+                    <li>Sales maintenance.</li>
+                </ol>
+                <h4>Report</h4>
+                <ol>
+                    <li>Sales analysis report.</li>
+                    <li>Sales profit analysis report.</li>
+                    <li>Sale channel analysis report.</li>
+                    <li>Purchase analysis report.</li>
+                </ol>
+            </div>
         </div>
-    </div><!-- /.box-body -->
 </div>
