--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,76 +1,102 @@
-<table class="table table-bordered table-hover table-condensed">
-  <tr style="background-color: darkgray;">
-      <th>
-          Name
-      </th>
-      <th>
-          Price
-      </th>
-      <th>
-          ProductCode
-      </th>
-      <th>
-          RRP
-      </th>
-      <th>
-        Category
-    </th>
-      <th>Operation</th>
-  </tr>
-  <ng-template ngFor let-product [ngForOf]="products">
-    <tr>
-        <td >
-            {{product.name}}
-        </td>
-        <td>
-            {{product.price | currency:'NZD'}}
-        </td>
-        <td>
-            {{product.productCode}}
-        </td>
-        <td>
-            {{product.rrp}}
-        </td>
-        <td>
-            {{product.productCategory?.name}}
-        </td>
-        <td>
-            <a class="fa fa-chevron-circle-down"  style="cursor:pointer" (click)="showDetail(product)"></a> |
-            <a class="fa fa-pencil-square-o" (click)="openModal(edit,product,false)" ></a> |
-            <a class="fa fa-trash" (click)="openModal(deleteConfirm,product,true)"></a>
-        </td>
-    </tr> 
-    <tr *ngIf="product.hidden && product.hidden===true">
-        <td colspan=6>
-            <app-product-detail [product]="product">
-            </app-product-detail>
-        </td>
-    </tr>
-  </ng-template>
-</table>
-  
+<div class="row">
+    <div class="col-md-4">
+        <div class="input-group">
+            <input class="form-control" (keydown.enter)="onSearchKeydown($event)" id="Name" name="Name" placeholder="Name or gstNumber"
+                type="text" [(ngModel)]="searchContent" autocomplete="off">
+
+            <span class="input-group-btn">
+                <button type="button" name="seach" id="search-btn" (click)="search()" class="btn btn-primary">Search</button>
+            </span>
+        </div>
+    </div>
+
+
+    <div class="col-md-8 ">
+        <div class="btn-group float-right">
+            <button class="btn btn-primary" (click)="addOrEdit()">Add</button>
+            <button class="btn btn-primary">Import</button>
+            <button class="btn btn-primary">Export</button>
+        </div>
+    </div>
+</div>
+<br>
+<div class="row" *ngIf="products; else loading">
+    <div class="col-12">
+            <div class="table-responsive">
+        <table class="table table-bordered table-hover table-condensed table-sm">
+            <tr style="background-color: darkgray;">
+                <th>
+                    Name
+                </th>
+                <th>
+                    Price
+                </th>
+                <th>
+                    ProductCode
+                </th>
+                <th>
+                    RRP
+                </th>
+                <th>
+                    Category
+                </th>
+                <th>Operation</th>
+            </tr>
+            <ng-template ngFor let-product [ngForOf]="products">
+                <tr>
+                    <td>
+                        {{product.name}}
+                    </td>
+                    <td>
+                        {{product.price | currency:'NZD'}}
+                    </td>
+                    <td>
+                        {{product.productCode}}
+                    </td>
+                    <td>
+                        {{product.rrp}}
+                    </td>
+                    <td>
+                        {{product.productCategory?.name}}
+                    </td>
+                    <td>
+                        <a class="fa fa-chevron-circle-down" style="cursor:pointer" (click)="showDetail(product)"></a> |
+                        <a class="fa fa-pencil-square-o" (click)="openModal(edit,product,false)"></a> |
+                        <a class="fa fa-trash" (click)="openModal(deleteConfirm,product,true)"></a>
+                    </td>
+                </tr>
+                <tr *ngIf="product.hidden && product.hidden===true">
+                    <td colspan=6>
+                        <app-product-detail [product]="product">
+                        </app-product-detail>
+                    </td>
+                </tr>
+            </ng-template>
+        </table>
+        </div>
+    </div>
+</div>
 <ng-template #deleteConfirm>
     <div class="modal-header">
         <h4 class="modal-title pull-left">Delete item</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-          <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">&times;</span>
         </button>
     </div>
-  <div class="modal-body text-center">
-    <p>Do you want to delete {{product.name}}?</p>
-      <button type="button" class="btn btn-default" (click)="confirm()" style="margin-right: 20px;" >Yes</button>
-      <button type="button" class="btn btn-primary" (click)="decline()" >No</button>
-  </div>
+    <div class="modal-body text-center">
+        <p>Do you want to delete {{product.name}}?</p>
+        <button type="button" class="btn btn-default" (click)="confirm()" style="margin-right: 20px;">Yes</button>
+        <button type="button" class="btn btn-primary" (click)="decline()">No</button>
+    </div>
 </ng-template>
 <ng-template #edit>
     <div class="modal-header">
         <h4 class="modal-title pull-left">Edit</h4>
         <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide()">
-          <span aria-hidden="true">&times;</span>
+            <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body text-center">
-      <p>{{product.name}}
+        <p>{{product.name}}
     </div>
 </ng-template>
-
