--- a/src/app/suppliers/supplier-detail.component.html
+++ b/src/app/suppliers/supplier-detail.component.html
@@ -2,7 +2,7 @@
         <div class="panel-body" style="background-color:white;padding:20px;">
                 <div class="row">
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>Name</label>
                                         </div>
@@ -12,7 +12,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>gstNumber</label>
                                         </div>
@@ -22,7 +22,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>bankName</label>
                                         </div>
@@ -32,7 +32,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>bankBranch</label>
                                         </div>
@@ -42,7 +42,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>paymentTerm</label>
                                         </div>
@@ -52,7 +52,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalName</label>
                                         </div>
@@ -62,7 +62,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalAddress</label>
                                         </div>
@@ -72,7 +72,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalSuburb</label>
                                         </div>
@@ -82,7 +82,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalCity</label>
                                         </div>
@@ -92,7 +92,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalCountry</label>
                                         </div>
@@ -102,7 +102,7 @@
                                 </div>
                         </div>
                         <div class="col-md-6">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-4">
                                                 <label>postalCode</label>
                                         </div>
@@ -112,7 +112,7 @@
                                 </div>
                         </div>
                         <div class="col-md-12">
-                                <div class="form-group">
+                                <div class="form-group row">
                                         <div class="col-md-12">
                                                 <label>
                                                         note
