--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,34 @@
+<div [ngClass]="smallLeftMenu?'sidenav-toggled':''">
 <!-- Navigation-->
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-    <a class="navbar-brand" href="" [routerLink]="['dashboard']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Inventory</a>
+    <a class="navbar-brand" href="" [routerLink]="['dashboard']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+        <img src="http://inventory.arthurdid.net/images/logo/83e6de18-7ed4-4015-990e-ee17e8865cdc.png" width="140" height="25">
+    </a>
+
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="showMenu()">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive" *ngIf="!loginRequired">
+
+    <div [ngClass]="menuShow? 'show navbar-collapse' : 'collapse navbar-collapse'" *ngIf="!loginRequired">
         <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
+            <li>
+                <div style="padding:10px;">
+                    <div class="row">
+                        <div class="col-md-auto">
+                            <img alt="User Image" 
+                            style="width: 40px;"
+                            class="rounded-circle float-left" 
+                            src="http://inventory.arthurdid.net/images/UserHeader/8a163d20-1967-465a-8484-867ee5e6002f.png">
+                        </div>
+                        <div class="col" style="color:white" *ngIf="!smallLeftMenu">
+                            <label>Selina</label><br>
+                            <label>Online    <i class="fa fa-circle text-success"></i> </label>
+                        </div>
+                    </div>
+                </div>
+            </li>
             <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
                 <a class="nav-link" href="" [routerLink]="['dashboard']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
                     <i class="fa fa-fw fa-dashboard"></i>
@@ -72,14 +94,15 @@
         </ul>
         <ul class="navbar-nav sidenav-toggler">
             <li class="nav-item">
-                <a class="nav-link text-center" id="sidenavToggler">
+                <a class="nav-link text-center" id="sidenavToggler" (click)="minimizeLeftMenu()">
                     <i class="fa fa-fw fa-angle-left"></i>
                 </a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown" dropdown>
-                <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" dropdownToggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" dropdownToggle data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
                     <i class="fa fa-fw fa-envelope"></i>
                     <span class="d-lg-none">Messages
                         <span class="badge badge-pill badge-primary">12 New</span>
@@ -115,7 +138,8 @@
                 </div>
             </li>
             <li class="nav-item dropdown" dropdown>
-                <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" dropdownToggle data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" dropdownToggle data-toggle="dropdown" aria-haspopup="true"
+                    aria-expanded="false">
                     <i class="fa fa-fw fa-bell"></i>
                     <span class="d-lg-none">Alerts
                         <span class="badge badge-pill badge-warning">6 New</span>
@@ -176,7 +200,7 @@
         </ul>
     </div>
 </nav>
-<div class="content-wrapper">
+<div class="content-wrapper" [style.margin-left.px]=unlogContentSize>
     <div class="container-fluid">
         <!-- Breadcrumbs-->
         <ol class="breadcrumb">
@@ -215,4 +239,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
