--- a/src/styles.css
+++ b/src/styles.css
@@ -118,8 +118,11 @@ body.fixed-nav {
       flex-direction: column;
       margin-top: 56px; }
       #mainNav .navbar-collapse .navbar-sidenav > .nav-item {
-        border-top: 1px solid rgb(37, 32, 32);
-        border-bottom: 1px solid rgb(59, 49, 49);
+        border-top: 0px;
+        border-bottom: 1px black;
+        border-left: 0;
+        border-right: 0;
+        border-style: outset;
         width: 250px;
         padding: 0; }
         #mainNav .navbar-collapse .navbar-sidenav > .nav-item > .nav-link {
@@ -179,14 +182,14 @@ body.fixed-nav {
   #mainNav.fixed-top.navbar-light .sidenav-toggler a i {
     color: rgba(0, 0, 0, 0.5); }
 
-body.sidenav-toggled #mainNav.fixed-top .sidenav-toggler {
+.sidenav-toggled #mainNav.fixed-top .sidenav-toggler {
   overflow-x: hidden;
   width: 55px; }
-  body.sidenav-toggled #mainNav.fixed-top .sidenav-toggler .nav-item,
-  body.sidenav-toggled #mainNav.fixed-top .sidenav-toggler .nav-link {
+  .sidenav-toggled #mainNav.fixed-top .sidenav-toggler .nav-item,
+  .sidenav-toggled #mainNav.fixed-top .sidenav-toggler .nav-link {
     width: 55px !important; }
 
-body.sidenav-toggled #mainNav.fixed-top #sidenavToggler i {
+.sidenav-toggled #mainNav.fixed-top #sidenavToggler i {
   -webkit-transform: scaleX(-1);
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
@@ -201,7 +204,7 @@ body.sidenav-toggled #mainNav.fixed-top #sidenavToggler i {
   #mainNav.static-top .sidenav-toggler {
     display: flex; } }
 
-body.sidenav-toggled #mainNav.static-top #sidenavToggler i {
+.sidenav-toggled #mainNav.static-top #sidenavToggler i {
   -webkit-transform: scaleX(-1);
   -moz-transform: scaleX(-1);
   -o-transform: scaleX(-1);
@@ -223,24 +226,24 @@ body.sidenav-toggled #mainNav.static-top #sidenavToggler i {
   display: none; }
 
 @media (min-width: 992px) {
-  body.sidenav-toggled .content-wrapper {
+  .sidenav-toggled .content-wrapper {
     margin-left: 55px; } }
 
 
 
-body.sidenav-toggled .navbar-sidenav {
+.sidenav-toggled .navbar-sidenav {
   overflow-x: hidden;
   width: 55px; }
-  body.sidenav-toggled .navbar-sidenav .nav-link-text {
+  .sidenav-toggled .navbar-sidenav .nav-link-text {
     display: none; }
-  body.sidenav-toggled .navbar-sidenav .nav-item,
-  body.sidenav-toggled .navbar-sidenav .nav-link {
+  .sidenav-toggled .navbar-sidenav .nav-item,
+  .sidenav-toggled .navbar-sidenav .nav-link {
     width: 55px !important; }
-    body.sidenav-toggled .navbar-sidenav .nav-item:after,
-    body.sidenav-toggled .navbar-sidenav .nav-link:after {
+    .sidenav-toggled .navbar-sidenav .nav-item:after,
+    .sidenav-toggled .navbar-sidenav .nav-link:after {
       display: none; }
 
-body.sidenav-toggled .navbar-sidenav-tooltip.show {
+.sidenav-toggled .navbar-sidenav-tooltip.show {
   display: flex; }
 
 #mainNav.navbar-dark .navbar-collapse .navbar-sidenav .nav-link-collapse:after {
@@ -346,7 +349,7 @@ footer.sticky-footer {
       width: calc(100% - 250px); } }
 
 @media (min-width: 992px) {
-  body.sidenav-toggled footer.sticky-footer {
+  .sidenav-toggled footer.sticky-footer {
     width: calc(100% - 55px); } }
   /* 
     Component: callout
