--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,17 +1,12 @@
 <div class="row">
-    <div class="col-md-4">
-        <div class="input-group">
-            <input class="form-control" (keydown.enter)="onSearchKeydown($event)" id="Name" name="Name" placeholder="Name or gstNumber"
-                type="text" [(ngModel)]="searchContent" autocomplete="off">
-
-            <span class="input-group-btn">
-                <button type="button" name="seach" id="search-btn" (click)="search()" class="btn btn-primary">Search</button>
-            </span>
-        </div>
+    <div class="col input-group">
+            <input type="text" class="form-control" placeholder="Name or gstNumber" aria-label="Name or gstNumber"
+            [(ngModel)]="searchContent" autocomplete="off" aria-describedby="button-addon2">
+            <div class="input-group-append">
+              <button class="btn btn-default" type="button" (click)="search()" id="button-addon2">Search</button>
+            </div>
     </div>
-
-
-    <div class="col-md-8 ">
+    <div class="col">
         <div class="btn-group float-right">
             <button class="btn btn-primary" (click)="addOrEdit()">Add</button>
             <button class="btn btn-primary">Import</button>
