--- a/src/app/settings/company.component.html
+++ b/src/app/settings/company.component.html
@@ -1,3 +1,111 @@
-<p>
-  company works!
-</p>
+
+<div class="rows" *ngIf="companyForm">
+  <form [formGroup]="companyForm" (ngSubmit)="saveCompany()" autocomplete="off">
+    <div class="row">
+    <div class="col-md-4">
+      <div class="form-group" [ngClass]="{'error': companyForm.get('name').invalid && companyForm.get('name').dirty }">
+        <label for="name">Name:</label>
+        <em *ngIf="companyForm.get('name').invalid && companyForm.get('name').dirty">Required</em>
+        <input formControlName="name" id="name" type="text" class="form-control" placeholder="name..." />
+      </div>
+      <div class="form-group">
+        <label for="gst">GST Number:</label>
+        <input formControlName="gst" id="gst" type="text" class="form-control" placeholder="GST..." />
+      </div>
+
+      <div class="form-group">
+        <label for="tradingName">Trading Name:</label>
+        <input formControlName="tradingName" id="tradingName" type="text" class="form-control" placeholder="tradingName..." />
+      </div>
+      <div class="form-group">
+        <label for="industry">industry:</label>
+        <input formControlName="industry" id="industry" type="text" class="form-control" placeholder="industry..." />
+      </div>
+      <div class="form-group">
+        <label for="organisationType">organisationType:</label>
+        <input formControlName="organisationType" id="organisationType" type="text" class="form-control" placeholder="organisationType..." />
+      </div>
+
+      <div class="form-group">
+        <label for="website">website:</label>
+        <input formControlName="website" id="website" type="text" class="form-control" placeholder="website..." />
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="form-group">
+        <label for="timezone">timezone:</label>
+        <input formControlName="timezone" id="timezone" type="text" class="form-control" placeholder="timezone..." />
+      </div>
+      <div class="form-group">
+        <label for="address">address:</label>
+        <input formControlName="address" id="address" type="text" class="form-control" placeholder="address..."
+        />
+      </div>
+      <div class="form-group">
+        <label for="suburb">suburb:</label>
+        <input formControlName="suburb" id="suburb" type="text" class="form-control" placeholder="suburb..." />
+      </div>
+      <div class="form-group">
+        <label for="city">city:</label>
+        <input formControlName="city" id="city" type="text" class="form-control" placeholder="city..." />
+      </div>
+      <div class="form-group">
+        <label for="state">State:</label>
+        <input formControlName="state" id="state" type="text" class="form-control" placeholder="state..."
+        />
+      </div>
+      <div class="form-group">
+        <label for="country">Country:</label>
+        <input formControlName="country" id="country" type="text" class="form-control" placeholder="country..."
+        />
+      </div>
+    </div>
+    <div class="col-md-4">
+        <div class="form-group">
+            <label for="postCode">Postal Code:</label>
+            <input formControlName="postCode" id="postCode" type="text" class="form-control" placeholder="postCode..."
+            />
+          </div>
+      <div class="form-group">
+        <label for="firstName">Firstname:</label>
+        <input formControlName="firstName" id="firstName" type="text" class="form-control" placeholder="firstName..."
+        />
+      </div>
+      <div class="form-group">
+        <label for="lastName">Lastname:</label>
+        <input formControlName="lastName" id="lastName" type="text" class="form-control" placeholder="lastName..."
+        />
+      </div>
+      <div class="form-group">
+        <label for="officePhone">officePhone:</label>
+        <input formControlName="officePhone" id="officePhone" type="text" class="form-control" placeholder="officePhone..." />
+      </div>
+      <div class="form-group">
+        <label for="mobileNumber">mobileNumber:</label>
+        <input formControlName="mobileNumber" id="mobileNumber" type="text" class="form-control" placeholder="mobileNumber..."
+        />
+      </div>
+      <div class="form-group">
+        <label for="email">email:</label>
+        <input formControlName="email" id="email" type="text" class="form-control" placeholder="email..."
+        />
+      </div>
+    </div>
+    <div class="col-md-12">
+      <div class="form-group" [ngClass]="{'error': companyForm.get('note').invalid && companyForm.get('note').dirty }">
+        <label for="note">Note:</label>
+        <em *ngIf="companyForm.get('note').invalid && companyForm.get('note').dirty && companyForm.get('note')?.errors.maxLength">Cannot exceed 400 characters</em>
+        <textarea formControlName="note" id="note" rows=3 class="form-control" placeholder="note..."></textarea>
+      </div>
+     
+    </div>
+    <div class="col-md-12">
+      <p *ngIf="message" class="alert alert-warning">{{message}}</p>
+      <br>
+      <div class="pull-right">
+          <button style="margin-right: 10px;" type="submit" [disabled]="companyForm.invalid" class="btn btn-primary">Save</button>
+      </div>        
+    </div>
+  </div>
+  </form>
+</div>
