ProdcutCategory half done.

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -8,9 +8,9 @@
     </div>
     <div class="col">
         <div class="btn-group float-right">
-            <button class="btn btn-primary" (click)="addOrEdit()">Add</button>
-            <button class="btn btn-primary">Import</button>
-            <button class="btn btn-primary">Export</button>
+            <button class="btn btn-secondary" (click)="addOrEdit()">Add</button>
+            <button class="btn btn-secondary">Import</button>
+            <button class="btn btn-secondary">Export</button>
         </div>
     </div>
 </div>
