--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,11 +1,11 @@
 
 <div class="btn-group float-left">
-    <button class="btn btn-light" [routerLink]="['company']" routerLinkActive="active" >Company</button>
-    <button class="btn btn-light" [routerLink]="['users']" routerLinkActive="active">Users</button>
-    <button class="btn btn-light" [routerLink]="['warehouse']" routerLinkActive="active" >Warehouse</button>
-    <button class="btn btn-light"  routerLinkActive="active" >ProductCategory</button>
-    <button class="btn btn-light"  routerLinkActive="active" >Log</button>
-    <button class="btn btn-light"  routerLinkActive="active" >Data Management</button>
+    <button class="btn btn-secondary" [routerLink]="['company']" routerLinkActive="active" >Company</button>
+    <button class="btn btn-secondary" [routerLink]="['users']" routerLinkActive="active">Users</button>
+    <button class="btn btn-secondary" [routerLink]="['warehouse']" routerLinkActive="active" >Warehouse</button>
+    <button class="btn btn-secondary" [routerLink]="['categories']" routerLinkActive="active" >ProductCategory</button>
+    <button class="btn btn-secondary"  routerLinkActive="active" >Log</button>
+    <button class="btn btn-secondary"  routerLinkActive="active" >Data Management</button>
 </div>
 <div style="clear: both;padding-top: 10px;">
     <router-outlet></router-outlet>
