--- a/src/app/suppliers/suppliers.component.html
+++ b/src/app/suppliers/suppliers.component.html
@@ -83,7 +83,7 @@
                         {{supplier.contactEmail}}
                     </td>
                     <td>
-                        {{supplier.modifiedDate | date:'short'}}
+                        {{supplier.createdDate | date:'short'}}
                     </td>
                     <td>
                         <a class="fa fa-chevron-circle-down" style="cursor:pointer" (click)="showDetail(supplier)"></a> |
