--- a/src/app/settings/warehouse/warehouse.component.html
+++ b/src/app/settings/warehouse/warehouse.component.html
@@ -18,14 +18,14 @@
           <ng-template ngFor let-warehouse [ngForOf]="warehouses">
               <tr>
                   <td>
-                      <input (blur)="resetMessage()" type="text" class="form-control" value="{{warehouse.name}}" (keydown.enter)="onKeydown(warehouse,$event,'name')"/>
+                      <input (blur)="resetMessage()" type="text" class="form-control"  value="{{warehouse.name}}" (blur)="resetMessage()" (keydown.enter)="onKeydown(warehouse,$event,'name')"/>
                       
                   </td>
                   <td>
-                      <input (blur)="resetMessage()" type="text" class="form-control" value="{{warehouse.status}}" (keydown.enter)="onKeydown(warehouse,$event,'status')"/>
+                      <input (blur)="resetMessage()" type="text" class="form-control" value="{{warehouse.status}}" (blur)="resetMessage()" (keydown.enter)="onKeydown(warehouse,$event,'status')"/>
                   </td>
                   <td>
-                      <input (blur)="resetMessage()" type="text" class="form-control" value="{{warehouse.description}}" (keydown.enter)="onKeydown(warehouse,$event,'description')"/>
+                      <input (blur)="resetMessage()" type="text" class="form-control" value="{{warehouse.description}}" (blur)="resetMessage()" (keydown.enter)="onKeydown(warehouse,$event,'description')"/>
                   </td>
                   <td>
                       <a class="fa fa-pencil-square-o" ></a> |
@@ -37,3 +37,6 @@
       </div>
   </div>
 </div>
+<ng-template #loading>
+    <app-loading></app-loading>
+</ng-template>
