--- a/src/app/suppliers/suppliers.component.html
+++ b/src/app/suppliers/suppliers.component.html
@@ -20,7 +20,11 @@
     </div>
 </div>
 <br>
-<div class="row" *ngIf="suppliers; else loading">
+<ngx-spinner bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff" type="ball-scale-multiple">
+    <p style="font-size: 20px; color: white">Loading...</p>
+</ngx-spinner>
+
+<div class="row" *ngIf="suppliers;">
     <div class="col-12"> 
     <div class="table-responsive">
         <table class="table table-hover table-bordered table-sm">
@@ -127,9 +131,7 @@
         </p>
     </div>
 </ng-template>
-<ng-template #loading>
-    <app-loading></app-loading>
-</ng-template>
+
 
 <ng-template #addOredit>
     <div class="modal-header">
